--- a/angular-pubs/package.json
+++ b/angular-pubs/package.json
@@ -23,8 +23,10 @@
     "@angular/router": "^3.3.1",
     "@types/geojson": "^1.0.0",
     "@types/leaflet": "^1.0.56",
+    "@types/leaflet-markercluster": "^1.0.1",
     "core-js": "^2.4.1",
     "leaflet": "^1.0.3",
+    "leaflet.markercluster": "git+https://github.com/Leaflet/Leaflet.markercluster.git#v1.0.3",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
