--- a/angular-pubs/package.json
+++ b/angular-pubs/package.json
@@ -25,6 +25,7 @@
     "@types/leaflet": "^1.0.56",
     "@types/leaflet-markercluster": "^1.0.1",
     "core-js": "^2.4.1",
+    "jquery": "^3.2.1",
     "leaflet": "^1.0.3",
     "leaflet.markercluster": "git+https://github.com/Leaflet/Leaflet.markercluster.git#v1.0.3",
     "rxjs": "^5.0.1",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@angular/compiler-cli": "^2.3.1",
     "@types/jasmine": "2.5.38",
+    "@types/jquery": "^2.0.41",
     "@types/leaflet": "^1.0.56",
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.26",
